[gd_scene load_steps=15 format=3 uid="uid://decgkh02hynxv"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_wvoqm"]
[ext_resource type="PackedScene" uid="uid://cx1ftkeks1k1l" path="res://scenes/map.tscn" id="2_5mf5u"]
[ext_resource type="AudioStream" uid="uid://bq3dwoh4f5s0l" path="res://audio/music/menu.ogg" id="3_eme63"]
[ext_resource type="Environment" uid="uid://5vjbgd8jarup" path="res://misc/world.tres" id="3_eo67r"]
[ext_resource type="FontFile" uid="uid://ds7l2e3nfwa4m" path="res://misc/beatstreet.ttf" id="3_hou13"]
[ext_resource type="Shader" path="res://misc/post.gdshader" id="4_2lq8o"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vfwoe"]
resource_name = "ring"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.641496, 0.641496, 0.641496, 1)
metallic = 0.940618
roughness = 0.533254

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3yn5r"]
resource_name = "sign"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0, 0.321569, 1)
roughness = 0.5
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_vyu2c"]
_surfaces = [{
"aabb": AABB(-1.04413, -0.00303769, -0.0675, 2.08826, 6.04496, 0.207461),
"format": 4097,
"index_count": 222,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 2, 0, 7, 0, 3, 0, 2, 0, 6, 0, 7, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 4, 0, 1, 0, 5, 0, 4, 0, 0, 0, 1, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 5, 0, 10, 0, 7, 0, 5, 0, 11, 0, 10, 0, 10, 0, 8, 0, 9, 0, 10, 0, 11, 0, 8, 0, 3, 0, 8, 0, 1, 0, 3, 0, 9, 0, 8, 0, 7, 0, 9, 0, 3, 0, 7, 0, 10, 0, 9, 0, 11, 0, 35, 0, 8, 0, 11, 0, 34, 0, 35, 0, 1, 0, 32, 0, 5, 0, 1, 0, 33, 0, 32, 0, 5, 0, 39, 0, 17, 0, 5, 0, 32, 0, 39, 0, 16, 0, 37, 0, 19, 0, 16, 0, 38, 0, 37, 0, 8, 0, 26, 0, 1, 0, 26, 0, 24, 0, 27, 0, 24, 0, 8, 0, 25, 0, 26, 0, 8, 0, 24, 0, 34, 0, 18, 0, 36, 0, 34, 0, 11, 0, 18, 0, 8, 0, 43, 0, 25, 0, 8, 0, 35, 0, 43, 0, 24, 0, 41, 0, 27, 0, 24, 0, 42, 0, 41, 0, 33, 0, 26, 0, 40, 0, 33, 0, 1, 0, 26, 0, 37, 0, 18, 0, 19, 0, 37, 0, 36, 0, 18, 0, 16, 0, 39, 0, 38, 0, 16, 0, 17, 0, 39, 0, 41, 0, 26, 0, 27, 0, 41, 0, 40, 0, 26, 0, 24, 0, 43, 0, 42, 0, 24, 0, 25, 0, 43, 0, 5, 0, 18, 0, 11, 0, 18, 0, 16, 0, 19, 0, 16, 0, 5, 0, 17, 0, 18, 0, 5, 0, 16, 0, 12, 0, 33, 0, 13, 0, 12, 0, 32, 0, 33, 0, 15, 0, 34, 0, 14, 0, 15, 0, 35, 0, 34, 0, 21, 0, 37, 0, 20, 0, 21, 0, 36, 0, 37, 0, 23, 0, 39, 0, 22, 0, 23, 0, 38, 0, 39, 0, 29, 0, 41, 0, 28, 0, 29, 0, 40, 0, 41, 0, 31, 0, 43, 0, 30, 0, 31, 0, 42, 0, 43, 0, 20, 0, 38, 0, 23, 0, 20, 0, 37, 0, 38, 0, 22, 0, 32, 0, 12, 0, 22, 0, 39, 0, 32, 0, 14, 0, 36, 0, 21, 0, 14, 0, 34, 0, 36, 0, 28, 0, 42, 0, 31, 0, 28, 0, 41, 0, 42, 0, 30, 0, 35, 0, 15, 0, 30, 0, 43, 0, 35, 0, 13, 0, 40, 0, 29, 0, 13, 0, 33, 0, 40, 0),
"name": "ring",
"primitive": 3,
"vertex_count": 44,
"vertex_data": PackedByteArray(113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 61, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 61, 113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 189, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 189, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 61, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 61, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 189, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 189, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 61, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 189, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 189, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 61, 113, 61, 138, 61, 200, 231, 132, 64, 209, 81, 15, 62, 113, 61, 138, 189, 200, 231, 132, 64, 209, 81, 15, 62, 113, 61, 138, 61, 89, 180, 190, 64, 209, 81, 15, 62, 113, 61, 138, 189, 89, 180, 190, 64, 209, 81, 15, 62, 29, 166, 133, 63, 80, 187, 145, 64, 113, 61, 138, 61, 94, 151, 15, 63, 181, 68, 130, 64, 113, 61, 138, 61, 94, 151, 15, 63, 108, 87, 193, 64, 113, 61, 138, 61, 29, 166, 133, 63, 208, 224, 177, 64, 113, 61, 138, 61, 160, 51, 118, 63, 48, 201, 176, 64, 209, 81, 15, 62, 93, 218, 6, 63, 89, 180, 190, 64, 209, 81, 15, 62, 94, 218, 6, 63, 200, 231, 132, 64, 209, 81, 15, 62, 161, 51, 118, 63, 240, 210, 146, 64, 209, 81, 15, 62, 29, 166, 133, 191, 208, 224, 177, 64, 113, 61, 138, 61, 94, 151, 15, 191, 108, 87, 193, 64, 113, 61, 138, 61, 94, 151, 15, 191, 181, 68, 130, 64, 113, 61, 138, 61, 29, 166, 133, 191, 80, 187, 145, 64, 113, 61, 138, 61, 160, 51, 118, 191, 240, 210, 146, 64, 209, 81, 15, 62, 94, 218, 6, 191, 200, 231, 132, 64, 209, 81, 15, 62, 93, 218, 6, 191, 89, 180, 190, 64, 209, 81, 15, 62, 160, 51, 118, 191, 48, 201, 176, 64, 209, 81, 15, 62, 113, 61, 138, 61, 181, 68, 130, 64, 209, 81, 15, 62, 113, 61, 138, 189, 181, 68, 130, 64, 209, 81, 15, 62, 113, 61, 138, 61, 108, 87, 193, 64, 209, 81, 15, 62, 113, 61, 138, 189, 108, 87, 193, 64, 209, 81, 15, 62, 94, 151, 15, 63, 108, 87, 193, 64, 209, 81, 15, 62, 29, 166, 133, 63, 208, 224, 177, 64, 209, 81, 15, 62, 29, 166, 133, 63, 80, 187, 145, 64, 209, 81, 15, 62, 94, 151, 15, 63, 181, 68, 130, 64, 209, 81, 15, 62, 94, 151, 15, 191, 181, 68, 130, 64, 209, 81, 15, 62, 29, 166, 133, 191, 80, 187, 145, 64, 209, 81, 15, 62, 29, 166, 133, 191, 208, 224, 177, 64, 209, 81, 15, 62, 94, 151, 15, 191, 108, 87, 193, 64, 209, 81, 15, 62)
}, {
"aabb": AABB(-0.961725, 4.15329, 0.139961, 1.92345, 1.80622, 9.99868e-06),
"format": 4097,
"index_count": 30,
"index_data": PackedByteArray(1, 0, 2, 0, 0, 0, 1, 0, 3, 0, 2, 0, 2, 0, 6, 0, 0, 0, 6, 0, 4, 0, 7, 0, 4, 0, 2, 0, 5, 0, 6, 0, 2, 0, 4, 0, 1, 0, 10, 0, 3, 0, 10, 0, 8, 0, 11, 0, 8, 0, 1, 0, 9, 0, 10, 0, 1, 0, 8, 0),
"name": "sign",
"primitive": 3,
"vertex_count": 12,
"vertex_data": PackedByteArray(113, 61, 138, 61, 200, 231, 132, 64, 209, 81, 15, 62, 113, 61, 138, 189, 200, 231, 132, 64, 209, 81, 15, 62, 113, 61, 138, 61, 89, 180, 190, 64, 209, 81, 15, 62, 113, 61, 138, 189, 89, 180, 190, 64, 209, 81, 15, 62, 160, 51, 118, 63, 48, 201, 176, 64, 209, 81, 15, 62, 93, 218, 6, 63, 89, 180, 190, 64, 209, 81, 15, 62, 94, 218, 6, 63, 200, 231, 132, 64, 209, 81, 15, 62, 161, 51, 118, 63, 240, 210, 146, 64, 209, 81, 15, 62, 160, 51, 118, 191, 240, 210, 146, 64, 209, 81, 15, 62, 94, 218, 6, 191, 200, 231, 132, 64, 209, 81, 15, 62, 93, 218, 6, 191, 89, 180, 190, 64, 209, 81, 15, 62, 160, 51, 118, 191, 48, 201, 176, 64, 209, 81, 15, 62)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_iw1q3"]
resource_name = "sign_Cube001"
_surfaces = [{
"aabb": AABB(-1.04413, -0.00303769, -0.0675, 2.08826, 6.04496, 0.207461),
"attribute_data": PackedByteArray(104, 72, 250, 62, 136, 9, 0, 63, 104, 72, 250, 62, 208, 247, 157, 63, 241, 236, 255, 62, 208, 247, 157, 63, 104, 72, 250, 62, 136, 9, 0, 63, 104, 72, 250, 62, 116, 104, 15, 63, 104, 72, 250, 62, 116, 104, 15, 63, 241, 236, 255, 62, 116, 104, 15, 63, 104, 72, 250, 62, 224, 163, 244, 62, 104, 72, 250, 62, 208, 247, 157, 63, 16, 174, 5, 63, 208, 247, 157, 63, 104, 72, 250, 62, 116, 104, 15, 63, 16, 174, 5, 63, 116, 104, 15, 63, 241, 236, 255, 62, 208, 247, 157, 63, 204, 219, 2, 63, 136, 9, 0, 63, 204, 219, 2, 63, 208, 247, 157, 63, 241, 236, 255, 62, 116, 104, 15, 63, 204, 219, 2, 63, 136, 9, 0, 63, 204, 219, 2, 63, 116, 104, 15, 63, 204, 219, 2, 63, 116, 104, 15, 63, 204, 219, 2, 63, 224, 163, 244, 62, 204, 219, 2, 63, 208, 247, 157, 63, 16, 174, 5, 63, 208, 247, 157, 63, 204, 219, 2, 63, 116, 104, 15, 63, 16, 174, 5, 63, 116, 104, 15, 63, 104, 72, 250, 62, 124, 190, 111, 62, 104, 72, 250, 62, 136, 9, 0, 63, 241, 236, 255, 62, 124, 190, 111, 62, 104, 72, 250, 62, 124, 190, 111, 62, 104, 72, 250, 62, 224, 163, 244, 62, 16, 174, 5, 63, 124, 190, 111, 62, 204, 219, 2, 63, 124, 190, 111, 62, 204, 219, 2, 63, 224, 163, 244, 62, 16, 174, 5, 63, 124, 190, 111, 62, 241, 236, 255, 62, 124, 190, 111, 62, 204, 219, 2, 63, 124, 190, 111, 62, 204, 219, 2, 63, 136, 9, 0, 63, 196, 47, 8, 63, 42, 180, 107, 63, 118, 160, 239, 62, 41, 180, 107, 63, 195, 47, 8, 63, 64, 31, 133, 61, 119, 160, 239, 62, 56, 31, 133, 61, 241, 236, 255, 62, 36, 227, 245, 62, 226, 55, 44, 63, 36, 227, 245, 62, 226, 55, 44, 63, 136, 9, 0, 63, 255, 192, 23, 63, 136, 9, 0, 63, 255, 192, 23, 63, 136, 9, 0, 63, 255, 192, 23, 63, 116, 104, 15, 63, 241, 236, 255, 62, 124, 190, 111, 62, 255, 192, 23, 63, 124, 190, 111, 62, 255, 192, 23, 63, 136, 9, 0, 63, 241, 236, 255, 62, 6, 205, 160, 62, 241, 236, 255, 62, 6, 205, 160, 62, 226, 55, 44, 63, 6, 205, 160, 62, 4, 164, 116, 63, 44, 201, 138, 62, 88, 227, 63, 63, 56, 31, 133, 61, 86, 227, 63, 63, 41, 180, 107, 63, 4, 164, 116, 63, 128, 243, 54, 63, 60, 144, 167, 62, 6, 205, 160, 62, 241, 236, 255, 62, 6, 205, 160, 62, 241, 236, 255, 62, 6, 205, 160, 62, 2, 126, 208, 62, 124, 190, 111, 62, 2, 126, 208, 62, 136, 9, 0, 63, 241, 236, 255, 62, 124, 190, 111, 62, 2, 126, 208, 62, 136, 9, 0, 63, 2, 126, 208, 62, 136, 9, 0, 63, 2, 126, 208, 62, 116, 104, 15, 63, 60, 144, 167, 62, 36, 227, 245, 62, 60, 144, 167, 62, 136, 9, 0, 63, 241, 236, 255, 62, 36, 227, 245, 62, 196, 191, 53, 61, 128, 243, 54, 63, 80, 57, 128, 62, 41, 180, 107, 63, 82, 57, 128, 62, 64, 31, 133, 61, 196, 191, 53, 61, 46, 201, 138, 62, 204, 219, 2, 63, 27, 27, 3, 63, 196, 47, 8, 63, 192, 178, 117, 63, 119, 160, 239, 62, 192, 178, 117, 63, 104, 72, 250, 62, 27, 27, 3, 63, 204, 219, 2, 63, 27, 27, 3, 63, 196, 47, 8, 63, 32, 170, 212, 60, 119, 160, 239, 62, 32, 170, 212, 60, 104, 72, 250, 62, 27, 27, 3, 63, 202, 201, 249, 62, 124, 190, 111, 62, 255, 192, 23, 63, 27, 27, 3, 63, 38, 7, 68, 63, 32, 170, 212, 60, 202, 201, 249, 62, 6, 205, 160, 62, 202, 201, 249, 62, 6, 205, 160, 62, 156, 162, 126, 63, 148, 129, 130, 62, 202, 201, 249, 62, 36, 227, 245, 62, 226, 55, 44, 63, 27, 27, 3, 63, 156, 162, 126, 63, 77, 23, 59, 63, 255, 192, 23, 63, 27, 27, 3, 63, 255, 192, 23, 63, 27, 27, 3, 63, 38, 7, 68, 63, 192, 178, 117, 63, 106, 227, 111, 62, 192, 178, 117, 63, 2, 126, 208, 62, 27, 27, 3, 63, 2, 126, 208, 62, 27, 27, 3, 63, 64, 178, 174, 59, 77, 23, 59, 63, 60, 144, 167, 62, 27, 27, 3, 63, 202, 201, 249, 62, 36, 227, 245, 62, 64, 178, 174, 59, 148, 129, 130, 62, 202, 201, 249, 62, 6, 205, 160, 62, 202, 201, 249, 62, 6, 205, 160, 62, 106, 227, 111, 62, 32, 170, 212, 60, 2, 126, 208, 62, 27, 27, 3, 63, 202, 201, 249, 62, 124, 190, 111, 62),
"format": 4119,
"index_count": 222,
"index_data": PackedByteArray(2, 0, 11, 0, 6, 0, 2, 0, 9, 0, 11, 0, 8, 0, 22, 0, 10, 0, 8, 0, 20, 0, 22, 0, 21, 0, 15, 0, 23, 0, 21, 0, 12, 0, 15, 0, 14, 0, 5, 0, 18, 0, 14, 0, 1, 0, 5, 0, 7, 0, 13, 0, 19, 0, 7, 0, 0, 0, 13, 0, 15, 0, 32, 0, 23, 0, 15, 0, 33, 0, 32, 0, 31, 0, 25, 0, 28, 0, 31, 0, 35, 0, 25, 0, 11, 0, 26, 0, 6, 0, 11, 0, 29, 0, 26, 0, 22, 0, 27, 0, 10, 0, 22, 0, 30, 0, 27, 0, 35, 0, 79, 0, 25, 0, 35, 0, 76, 0, 79, 0, 3, 0, 72, 0, 16, 0, 3, 0, 75, 0, 72, 0, 16, 0, 89, 0, 43, 0, 16, 0, 72, 0, 89, 0, 40, 0, 84, 0, 50, 0, 40, 0, 86, 0, 84, 0, 24, 0, 64, 0, 4, 0, 64, 0, 56, 0, 65, 0, 56, 0, 24, 0, 59, 0, 64, 0, 24, 0, 56, 0, 76, 0, 48, 0, 81, 0, 76, 0, 35, 0, 48, 0, 25, 0, 102, 0, 60, 0, 25, 0, 79, 0, 102, 0, 57, 0, 97, 0, 67, 0, 57, 0, 99, 0, 97, 0, 75, 0, 63, 0, 94, 0, 75, 0, 3, 0, 63, 0, 83, 0, 46, 0, 49, 0, 83, 0, 80, 0, 46, 0, 42, 0, 90, 0, 87, 0, 42, 0, 44, 0, 90, 0, 96, 0, 62, 0, 66, 0, 96, 0, 93, 0, 62, 0, 58, 0, 103, 0, 100, 0, 58, 0, 61, 0, 103, 0, 17, 0, 47, 0, 34, 0, 47, 0, 41, 0, 51, 0, 41, 0, 17, 0, 45, 0, 47, 0, 17, 0, 41, 0, 36, 0, 74, 0, 37, 0, 36, 0, 73, 0, 74, 0, 39, 0, 77, 0, 38, 0, 39, 0, 78, 0, 77, 0, 53, 0, 85, 0, 52, 0, 53, 0, 82, 0, 85, 0, 55, 0, 91, 0, 54, 0, 55, 0, 88, 0, 91, 0, 69, 0, 95, 0, 68, 0, 69, 0, 92, 0, 95, 0, 71, 0, 101, 0, 70, 0, 71, 0, 98, 0, 101, 0, 52, 0, 88, 0, 55, 0, 52, 0, 85, 0, 88, 0, 54, 0, 73, 0, 36, 0, 54, 0, 91, 0, 73, 0, 38, 0, 82, 0, 53, 0, 38, 0, 77, 0, 82, 0, 68, 0, 98, 0, 71, 0, 68, 0, 95, 0, 98, 0, 70, 0, 78, 0, 39, 0, 70, 0, 101, 0, 78, 0, 37, 0, 92, 0, 69, 0, 37, 0, 74, 0, 92, 0),
"material": SubResource("StandardMaterial3D_vfwoe"),
"name": "ring",
"primitive": 3,
"vertex_count": 104,
"vertex_data": PackedByteArray(113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 61, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 61, 255, 127, 255, 127, 255, 255, 255, 191, 113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 61, 0, 0, 255, 127, 255, 255, 0, 0, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 61, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 61, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 61, 255, 127, 255, 127, 255, 255, 255, 191, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 61, 0, 0, 255, 127, 255, 255, 0, 0, 113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 189, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 189, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 189, 0, 20, 71, 187, 113, 61, 138, 189, 0, 0, 255, 127, 255, 255, 0, 0, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 189, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 189, 181, 68, 130, 64, 113, 61, 138, 189, 0, 0, 255, 127, 255, 255, 0, 0, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 61, 255, 255, 255, 127, 255, 255, 255, 255, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 61, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 61, 255, 127, 255, 127, 255, 255, 255, 191, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 61, 255, 255, 255, 127, 255, 255, 255, 255, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 61, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 61, 255, 255, 255, 255, 254, 255, 255, 63, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 61, 255, 127, 255, 127, 255, 255, 255, 191, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 189, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 189, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 61, 0, 20, 71, 187, 113, 61, 138, 189, 255, 255, 255, 127, 255, 255, 255, 255, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 189, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 61, 181, 68, 130, 64, 113, 61, 138, 189, 255, 255, 255, 127, 255, 255, 255, 255, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 61, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 61, 255, 127, 255, 255, 255, 255, 255, 191, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 61, 0, 0, 255, 127, 255, 255, 0, 0, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 189, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 189, 255, 127, 255, 255, 255, 255, 255, 191, 113, 61, 138, 189, 108, 87, 193, 64, 113, 61, 138, 189, 0, 0, 255, 127, 255, 255, 0, 0, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 189, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 189, 255, 127, 255, 255, 255, 255, 255, 191, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 189, 255, 255, 255, 127, 255, 255, 255, 255, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 61, 255, 255, 255, 127, 255, 255, 255, 255, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 61, 255, 255, 255, 255, 255, 255, 255, 63, 113, 61, 138, 61, 108, 87, 193, 64, 113, 61, 138, 61, 255, 127, 255, 255, 255, 255, 255, 191, 113, 61, 138, 61, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 255, 255, 255, 191, 113, 61, 138, 189, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 61, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 189, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 255, 255, 255, 191, 29, 166, 133, 63, 80, 187, 145, 64, 113, 61, 138, 61, 255, 255, 255, 127, 255, 255, 255, 255, 29, 166, 133, 63, 80, 187, 145, 64, 113, 61, 138, 61, 255, 255, 255, 255, 254, 255, 255, 63, 29, 166, 133, 63, 80, 187, 145, 64, 113, 61, 138, 61, 255, 191, 255, 63, 255, 191, 255, 31, 94, 151, 15, 63, 181, 68, 130, 64, 113, 61, 138, 61, 255, 127, 0, 0, 255, 255, 255, 63, 94, 151, 15, 63, 181, 68, 130, 64, 113, 61, 138, 61, 255, 191, 255, 63, 255, 191, 255, 31, 94, 151, 15, 63, 181, 68, 130, 64, 113, 61, 138, 61, 255, 255, 255, 255, 255, 255, 255, 63, 94, 151, 15, 63, 108, 87, 193, 64, 113, 61, 138, 61, 255, 191, 255, 191, 255, 255, 255, 255, 94, 151, 15, 63, 108, 87, 193, 64, 113, 61, 138, 61, 255, 255, 255, 255, 254, 255, 255, 63, 94, 151, 15, 63, 108, 87, 193, 64, 113, 61, 138, 61, 255, 127, 255, 255, 255, 255, 255, 191, 29, 166, 133, 63, 208, 224, 177, 64, 113, 61, 138, 61, 255, 191, 255, 191, 255, 255, 255, 255, 29, 166, 133, 63, 208, 224, 177, 64, 113, 61, 138, 61, 255, 255, 255, 127, 255, 255, 255, 255, 29, 166, 133, 63, 208, 224, 177, 64, 113, 61, 138, 61, 255, 255, 255, 255, 254, 255, 255, 63, 160, 51, 118, 63, 48, 201, 176, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 93, 218, 6, 63, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 94, 218, 6, 63, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 161, 51, 118, 63, 240, 210, 146, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 29, 166, 133, 191, 208, 224, 177, 64, 113, 61, 138, 61, 255, 255, 255, 255, 254, 255, 255, 63, 29, 166, 133, 191, 208, 224, 177, 64, 113, 61, 138, 61, 0, 0, 255, 127, 255, 255, 0, 0, 29, 166, 133, 191, 208, 224, 177, 64, 113, 61, 138, 61, 255, 63, 255, 191, 255, 255, 0, 0, 94, 151, 15, 191, 108, 87, 193, 64, 113, 61, 138, 61, 255, 255, 255, 255, 255, 255, 255, 63, 94, 151, 15, 191, 108, 87, 193, 64, 113, 61, 138, 61, 255, 127, 255, 255, 255, 255, 255, 191, 94, 151, 15, 191, 108, 87, 193, 64, 113, 61, 138, 61, 255, 63, 255, 191, 255, 255, 0, 0, 94, 151, 15, 191, 181, 68, 130, 64, 113, 61, 138, 61, 255, 63, 255, 63, 255, 191, 255, 95, 94, 151, 15, 191, 181, 68, 130, 64, 113, 61, 138, 61, 255, 127, 0, 0, 255, 255, 255, 63, 94, 151, 15, 191, 181, 68, 130, 64, 113, 61, 138, 61, 255, 255, 255, 255, 254, 255, 255, 63, 29, 166, 133, 191, 80, 187, 145, 64, 113, 61, 138, 61, 255, 255, 255, 255, 254, 255, 255, 63, 29, 166, 133, 191, 80, 187, 145, 64, 113, 61, 138, 61, 255, 63, 255, 63, 255, 191, 255, 95, 29, 166, 133, 191, 80, 187, 145, 64, 113, 61, 138, 61, 0, 0, 255, 127, 255, 255, 0, 0, 160, 51, 118, 191, 240, 210, 146, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 94, 218, 6, 191, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 93, 218, 6, 191, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 255, 255, 255, 191, 160, 51, 118, 191, 48, 201, 176, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 61, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 61, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 189, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 189, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 0, 0, 255, 255, 255, 63, 113, 61, 138, 61, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 255, 255, 255, 255, 191, 113, 61, 138, 61, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 189, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 189, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 255, 255, 255, 255, 191, 94, 151, 15, 63, 108, 87, 193, 64, 209, 81, 15, 62, 255, 191, 255, 191, 255, 255, 255, 255, 94, 151, 15, 63, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 255, 255, 255, 255, 191, 94, 151, 15, 63, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 29, 166, 133, 63, 208, 224, 177, 64, 209, 81, 15, 62, 255, 191, 255, 191, 255, 255, 255, 255, 29, 166, 133, 63, 208, 224, 177, 64, 209, 81, 15, 62, 255, 255, 255, 127, 255, 255, 255, 255, 29, 166, 133, 63, 208, 224, 177, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 29, 166, 133, 63, 80, 187, 145, 64, 209, 81, 15, 62, 255, 255, 255, 127, 255, 255, 255, 255, 29, 166, 133, 63, 80, 187, 145, 64, 209, 81, 15, 62, 255, 191, 255, 63, 255, 191, 255, 31, 29, 166, 133, 63, 80, 187, 145, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 94, 151, 15, 63, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 0, 0, 255, 255, 255, 63, 94, 151, 15, 63, 181, 68, 130, 64, 209, 81, 15, 62, 255, 191, 255, 63, 255, 191, 255, 31, 94, 151, 15, 63, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 94, 151, 15, 191, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 94, 151, 15, 191, 181, 68, 130, 64, 209, 81, 15, 62, 255, 63, 255, 63, 255, 191, 255, 95, 94, 151, 15, 191, 181, 68, 130, 64, 209, 81, 15, 62, 255, 127, 0, 0, 255, 255, 255, 63, 29, 166, 133, 191, 80, 187, 145, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 29, 166, 133, 191, 80, 187, 145, 64, 209, 81, 15, 62, 255, 63, 255, 63, 255, 191, 255, 95, 29, 166, 133, 191, 80, 187, 145, 64, 209, 81, 15, 62, 0, 0, 255, 127, 255, 255, 0, 0, 29, 166, 133, 191, 208, 224, 177, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 29, 166, 133, 191, 208, 224, 177, 64, 209, 81, 15, 62, 0, 0, 255, 127, 255, 255, 0, 0, 29, 166, 133, 191, 208, 224, 177, 64, 209, 81, 15, 62, 255, 63, 255, 191, 255, 255, 0, 0, 94, 151, 15, 191, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 127, 255, 255, 255, 191, 94, 151, 15, 191, 108, 87, 193, 64, 209, 81, 15, 62, 255, 127, 255, 255, 255, 255, 255, 191, 94, 151, 15, 191, 108, 87, 193, 64, 209, 81, 15, 62, 255, 63, 255, 191, 255, 255, 0, 0)
}, {
"aabb": AABB(-0.961725, 4.15329, 0.139961, 1.92345, 1.80622, 9.99868e-06),
"attribute_data": PackedByteArray(196, 47, 22, 63, 42, 180, 105, 63, 59, 208, 5, 63, 41, 180, 105, 63, 195, 47, 22, 63, 128, 62, 106, 61, 59, 208, 5, 63, 112, 62, 106, 61, 2, 82, 129, 63, 44, 201, 134, 62, 88, 227, 77, 63, 112, 62, 106, 61, 86, 227, 77, 63, 41, 180, 105, 63, 2, 82, 129, 63, 128, 243, 52, 63, 225, 223, 202, 61, 128, 243, 52, 63, 80, 57, 156, 62, 41, 180, 105, 63, 82, 57, 156, 62, 128, 62, 106, 61, 225, 223, 202, 61, 46, 201, 134, 62),
"format": 4119,
"index_count": 30,
"index_data": PackedByteArray(1, 0, 2, 0, 0, 0, 1, 0, 3, 0, 2, 0, 2, 0, 6, 0, 0, 0, 6, 0, 4, 0, 7, 0, 4, 0, 2, 0, 5, 0, 6, 0, 2, 0, 4, 0, 1, 0, 10, 0, 3, 0, 10, 0, 8, 0, 11, 0, 8, 0, 1, 0, 9, 0, 10, 0, 1, 0, 8, 0),
"material": SubResource("StandardMaterial3D_3yn5r"),
"name": "sign",
"primitive": 3,
"vertex_count": 12,
"vertex_data": PackedByteArray(113, 61, 138, 61, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 189, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 61, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 113, 61, 138, 189, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 160, 51, 118, 63, 48, 201, 176, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 93, 218, 6, 63, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 94, 218, 6, 63, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 255, 255, 255, 191, 161, 51, 118, 63, 240, 210, 146, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 160, 51, 118, 191, 240, 210, 146, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 94, 218, 6, 191, 200, 231, 132, 64, 209, 81, 15, 62, 255, 127, 255, 127, 255, 255, 255, 191, 93, 218, 6, 191, 89, 180, 190, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191, 160, 51, 118, 191, 48, 201, 176, 64, 209, 81, 15, 62, 255, 127, 255, 127, 254, 255, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_vyu2c")

[sub_resource type="QuadMesh" id="QuadMesh_japfl"]
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_smr3k"]
render_priority = 0
shader = ExtResource("4_2lq8o")
shader_parameter/shadows_enabled = true
shader_parameter/highlights_enabled = true
shader_parameter/shadow_strength = 0.4
shader_parameter/highlight_strength = 0.1
shader_parameter/highlight_color = Color(1, 1, 1, 1)
shader_parameter/shadow_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_udiqg"]
size = Vector3(0.802, 0.72, 0.005)

[sub_resource type="BoxShape3D" id="BoxShape3D_ugfvb"]
size = Vector3(1.802, 1.395, 0.996)

[node name="Menu" type="Node"]
script = ExtResource("1_wvoqm")

[node name="Map" parent="." instance=ExtResource("2_5mf5u")]

[node name="Sign" parent="Map/sign5/Sign" index="0"]
mesh = SubResource("ArrayMesh_iw1q3")

[node name="Camera3D" type="Camera3D" parent="Map"]
transform = Transform3D(-0.97237, 0.0312785, 0.23134, 0, 0.990983, -0.133986, -0.233445, -0.130284, -0.963602, -37.117, 0.789, -0.024)
environment = ExtResource("3_eo67r")
fov = 80.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/Camera3D"]
transform = Transform3D(1, 3.55271e-15, -2.13163e-14, 0, 1, 0, 0, 0, 1, 0, 0, -0.084)
mesh = SubResource("QuadMesh_japfl")
surface_material_override/0 = SubResource("ShaderMaterial_smr3k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Map"]
transform = Transform3D(0.866025, 0.353553, -0.353554, 0, 0.707107, 0.707106, 0.5, -0.612372, 0.612373, 0, 4.5985, 0)
light_color = Color(0.854902, 0.643137, 0.639216, 1)
light_energy = 2.0
shadow_enabled = true

[node name="Play" type="Label3D" parent="Map"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, -37.081, 0.506, 0.862)
pixel_size = 0.0058
shaded = true
texture_filter = 4
text = "PLAY"
font = ExtResource("3_hou13")
font_size = 64
outline_size = 30

[node name="PlayArea" type="Area3D" parent="Map/Play"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.045796, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Play/PlayArea"]
shape = SubResource("BoxShape3D_udiqg")

[node name="Stop" type="Label3D" parent="Map"]
transform = Transform3D(-0.77384, 0, 0.633381, 0, 1, 0, -0.633381, 0, -0.77384, -40.3, 5.445, 7.075)
pixel_size = 0.0071
shaded = true
texture_filter = 4
text = "STOP
  PLAYING"
font = ExtResource("3_hou13")
font_size = 64
outline_size = 30
horizontal_alignment = 0

[node name="StopArea" type="Area3D" parent="Map/Stop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.773, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Stop/StopArea"]
shape = SubResource("BoxShape3D_ugfvb")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eme63")
autoplay = true
bus = &"mus"

[connection signal="input_event" from="Map/Play/PlayArea" to="." method="_on_play_area_input_event"]
[connection signal="mouse_entered" from="Map/Play/PlayArea" to="." method="_on_play_area_mouse_entered"]
[connection signal="mouse_exited" from="Map/Play/PlayArea" to="." method="_on_play_area_mouse_exited"]
[connection signal="input_event" from="Map/Stop/StopArea" to="." method="_on_stop_area_input_event"]
[connection signal="mouse_entered" from="Map/Stop/StopArea" to="." method="_on_stop_area_mouse_entered"]
[connection signal="mouse_exited" from="Map/Stop/StopArea" to="." method="_on_stop_area_mouse_exited"]

[editable path="Map"]
[editable path="Map/sign5"]
